@@ -1,3 +1,10 @@
+Tue Jul 30 13:25:42 2002  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c, gui/gdmlogin.c, gui/gdmphotosetup.c,
+	  gui/greeter/greeter_session.c: s/.gnome/.gnome2/, Applied patch
+	  from #89454.  But still also read .gnome/photo if we can't find
+	  .gnome2/photo
+
 Tue Jul 30 12:00:28 2002  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c: fix the linux-only proccess detection thing to work
